# learn_gl

./: Cargo.toml  build.rs
shaders/: offset_textured.fs  offset_textured.vs  textured.fs
src/: common.rs  component.rs  main.rs  main_ori.rs  rendering.rs  resource.rs  system.rs
src/common/: math.rs
src/component/: animated_sprite.rs  material.rs  mesh.rs  sprite.rs  spritesheet.rs  transform.rs
src/rendering/: buffer.rs  resource.rs  shader.rs  texture.rs  transform.rs
src/rendering_ori/: buffer.rs  shader.rs  texture.rs  transform.rs
src/resource/: camera.rs  keyboard.rs  projection.rs
src/system/: input_system.rs  render_system.rs  sprite_system.rs
