[package]
name = "learn_gl"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.1"
stb_image = "0.2.3"
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
num-traits = "0.2.14"
specs = "0.17.0"
gl = "0.14.0"
time = "0.1.44"


[build-dependencies]
# gl_generator = "0.14.0"